--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=LiterAlura
+spring.datasource.url=jdbc:postgresql://localhost/literalura
+spring.datasource.username=postgres
+spring.datasource.password=guardia82
+spring.datasource.driver-class-name=org.postgresql.Driver
